--- a/package.json
+++ b/package.json
@@ -1,4 +1,21 @@
 {
+  "name": "valo",
+  "version": "1.0.0",
+  "description": "",
+  "main": "script.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JericNarte/JericNarte.github.io.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/JericNarte/JericNarte.github.io/issues"
+  },
+  "homepage": "https://github.com/JericNarte/JericNarte.github.io#readme",
   "dependencies": {
     "axios": "^0.27.2"
   }
